support direct in editor edits e.g. for ABAB code